# canellas-backend

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: rust.yml
docs/: architectural_decisions.md
migrations/: 20210220143214_create_test_table.sql  20210611231453_users.sql
src/: app.rs  config.rs  db.rs  lib.rs  log.rs  main.rs  routes.rs
src/handlers/: dummy.rs  health_check.rs  mod.rs  users.rs
src/repos/: mod.rs  users.rs
tests/api/: health_check.rs  helpers.rs  main.rs  users.rs
