[package]
name = "cotidio-server"
version = "0.1.0"
authors = [
            "Eduardo Canellas <eduardocanellas@id.uff.br>", 
            "Beatriz Tantow <beatriz.tantow@gmail.com>"
          ]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3"
actix-rt = "1.1.1"
serde = "1.0.118"
serde_json = "1.0"