[package]
authors = [
  "Eduardo Canellas <eduardocanellas@id.uff.br>",
]
edition = "2018"
name = "ps_globo"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
anyhow = "1.0.38"
chrono = "0.4.19"
config = {version = "0.10.1", default-features = false}
dotenv = "0.15.0"
serde = "1.0.123"
serde_json = "1.0.62"
sqlx = {version = "0.4", default-features = false, features = ["runtime-actix-rustls", "macros", "postgres", "chrono", "migrate", "offline"]}
thiserror = "1.0.25"
tracing = "0.1.23"
tracing-actix-web = "0.2.1"
tracing-futures = "0.2.4"
tracing-log = "0.1.1"
tracing-subscriber = {version = "0.2.15", features = ["json"]}

[dev-dependencies]
actix-rt = "1"
reqwest = {version = "0.10", features = ["json"]}
tokio = {version = "0.2"}
uuid = "0.8"
fake = "2.4"
